nullaway_error_e2ed35a1-b0c7-4dd1-af65-a5bf0856b2eb.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/environment/Environment.java:256: error: [NullAway] dereferenced expression this.renderListeners.get(renderType) is @Nullable
    this.renderListeners.get(renderType).add(listener);
                                        ^
    (see http://t.uber.com/nullaway )
